[package]
name = "svdtools"
version = "0.4.6"
repository = "https://github.com/rust-embedded/svdtools/"
description = "Tool for modifying bugs in CMSIS SVD"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>", "MarcoIeni"]
categories = [
    "command-line-utilities",
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = ["svd", "embedded", "register"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = [
    "/res",
    "/src",
    "/tests",
    "CHANGELOG-rust.md",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
edition = "2021"
rust-version = "1.70"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "color"], optional = true }
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
svd-rs = { version = "0.14.12", features = ["serde", "derive-from"] }
svd-parser = { version = "0.14.9", features = ["expand"] }
svd-encoder = "0.14.7"
# serde_yaml 0.9.x looks broken
serde_yaml = { version = "0.8.26", optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
anyhow = "1.0.97"
thiserror = "1.0.35"
hashlink = "0.10.0"
globset = "0.4.16"
commands = "0.0.5"
env_logger = { version = "0.11", optional = true }
log = { version = "~0.4", features = ["std"] }
normpath = "1.3.0"
liquid = { version = "0.26.11", optional = true }
once_cell = "1.21.0"
rayon = { version = "1.7.0", optional = true }
regex = "1.10"
itertools = "0.14.0"
phf = { version = "0.11", features = ["macros"] }

[dependencies.yaml-rust]
package = "yaml-rust2"
version = "0.10"

[dev-dependencies]
similar = "2.5.0"
tempfile = "3.18"

[[bin]]
doc = false
name = "svdtools"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "json", "yaml"]

bin = [
    "dep:liquid",
    "dep:rayon",
    "dep:clap",
    "dep:env_logger",
]

json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
