[build-system]
requires = ["black", "flit", "isort"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "svdtools"
# dist-name = "svdtools"
author = "Adam Greig"
author-email = "adam@adamgreig.com"
maintainer = "Nicolas Stalder"
maintainer-email = "n@stalder.io"
home-page = "https://github.com/stm32-rs/svdtools"
requires-python = ">=3.6"
description-file = "README.md"
requires = [
  "click ~= 7.0",
  "PyYAML ~= 5.3",
  "lxml ~= 4.6",
]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.flit.scripts]
svd = "svdtools.cli:svdtools_cli"
